# hubuum-client-rust

./: .markdownlint.json  AGENTS.md  CHANGELOG.md  COMPATIBILITY.md  Cargo.toml  README.md  RELEASING.md  SECURITY.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  openapi-drift.yml  release.yml  server-compatibility.yml
api_resource_derive/src/: lib.rs
docs/: advanced.md  backups-and-computed-fields.md  client-setup.md  exports-and-tasks.md  integration-tests.md  principal-settings.md  querying.md  reconciliation.md  scoped-auth.md
docs/superpowers/plans/: 2026-06-18-sync-current-backend.md
docs/superpowers/specs/: 2026-06-18-sync-current-backend-design.md
e2e_client/: Cargo.toml
e2e_client/src/: harness.rs  lib.rs  naming.rs
e2e_client/tests/: auth.rs  backups_computed.rs  core_crud.rs  events_history.rs  exports_tasks.rs  iam.rs  imports.rs  integration.rs  metrics.rs  permissions.rs  relations.rs  remote_targets.rs  reports_tasks.rs  search.rs  v003.rs
hubuum_client_derive/: Cargo.toml  README.md
hubuum_client_derive/src/: lib.rs
hubuum_reconcile/: Cargo.toml  README.md
hubuum_reconcile/src/: lib.rs
openapi/: known-gaps.md  operations.json
scripts/: check-release.sh  openapi-contract.py  run-integration-tests.sh
src/: endpoints.rs  errors.rs  lib.rs
src/client/: async.rs  mod.rs  shared.rs  sync.rs  tests.rs  transport.rs
src/resources/: class.rs  collection.rs  event_sink.rs  export_template.rs  group.rs  mod.rs  namespace.rs  object.rs  remote_target.rs  report_template.rs  service_account.rs  user.rs
src/types/: auth.rs  backup.rs  baseurl.rs  computed.rs  config.rs  datetime.rs  event.rs  export.rs  filter.rs  history.rs  id.rs  identity.rs  import.rs  meta.rs  mod.rs  params.rs  remote.rs  report.rs  search.rs  settings.rs  task.rs  typed_object.rs
tests/: client_behavior.rs  container_integration.rs  foundations.rs  shared_scenarios.rs  typed_query_compile.rs
tests/container_integration/fixtures/: auth-providers.toml  generate-ldap-certificates.sh
tests/container_integration/probes/: id_paths.rs  mod.rs  stack_reuse.rs
tests/container_integration/seed/: init.sql
tests/container_integration/support/: clients.rs  mod.rs  naming.rs  probe.rs  stack.rs
tests/trybuild/: api_resource_fail_bad_name.rs  api_resource_fail_bad_name.stderr  api_resource_fail_empty_name.rs  api_resource_fail_empty_name.stderr  api_resource_fail_enum.rs  api_resource_fail_enum.stderr  api_resource_fail_missing_display_field.rs  api_resource_fail_missing_display_field.stderr  api_resource_fail_unnamed_fields.rs  api_resource_fail_unnamed_fields.stderr  checked_create_fail_missing_required.rs  checked_create_fail_missing_required.stderr  checked_create_pass.rs  typed_id_borrowed_pass.rs  typed_id_fail_wrong_resource.rs  typed_id_fail_wrong_resource.stderr  typed_id_into_only_pass.rs  typed_nested_id_fail_wrong_resource.rs  typed_nested_id_fail_wrong_resource.stderr  typed_query_fail_bool_contains.rs  typed_query_fail_bool_contains.stderr  typed_query_fail_numeric_contains.rs  typed_query_fail_numeric_contains.stderr  typed_query_fail_text_gte.rs  typed_query_fail_text_gte.stderr  typed_query_pass.rs
