[workspace]
members = ["hubuum_client_derive"]

[package]
name = "hubuum_client"
version = "0.0.2"
edition = "2024"
license = "MIT"
description = "Rust client library for the Hubuum API with synchronous and asynchronous interfaces."
repository = "https://github.com/hubuum/hubuum-client-rust"
documentation = "https://docs.rs/hubuum_client"
readme = "README.md"
keywords = ["hubuum", "api", "client", "async"]
categories = ["api-bindings"]

[features]
integration-tests = []

[dependencies]
hubuum_client_derive = { version = "0.0.1", path = "./hubuum_client_derive" }
reqwest = { version = "0", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
async-trait = "0"
serde_urlencoded = "0"
log = "0"
percent-encoding = "2"
strum = { version = "0.28", features = ["derive", "strum_macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
yare = "3"
httpmock = "0.8"
rstest = "0.26"
