[workspace]
members = ["hubuum_client_derive", "e2e_client"]
resolver = "3"

[package]
name = "hubuum_client"
version = "0.4.0"
edition = "2024"
rust-version = "1.86"
license = "MIT"
description = "Rust client library for the Hubuum API with synchronous and asynchronous interfaces."
repository = "https://github.com/hubuum/hubuum-client-rust"
documentation = "https://docs.rs/hubuum_client"
readme = "README.md"
keywords = ["hubuum", "api", "client", "async"]
categories = ["api-bindings"]
exclude = [".github/", "openapi/", "scripts/", "tests/"]

[features]
default = ["async"]
async = [
    "tokio",
    "reqwest/json",
    "reqwest/rustls",
    "reqwest/stream",
    "dep:async-stream",
    "dep:bytes",
    "dep:eventsource-stream",
    "dep:futures-core",
    "dep:futures-util",
]
blocking = ["reqwest/blocking", "reqwest/json", "reqwest/rustls"]
integration-tests = []
typed-schemas = ["dep:schemars"]

[dependencies]
hubuum_client_derive = { version = "0.4.0", path = "./hubuum_client_derive" }
reqwest = { version = "0.13", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
serde_urlencoded = "0.7"
log = "0.4"
percent-encoding = "2"
secrecy = { version = "0.10", features = ["serde"] }
serde_path_to_error = "0.1"
strum = { version = "0.28", features = ["derive", "strum_macros"] }
tokio = { version = "1", features = ["fs", "io-util", "time"], optional = true }
async-stream = { version = "0.3", optional = true }
bytes = { version = "1", optional = true }
eventsource-stream = { version = "0.2", optional = true }
fastrand = "2"
futures-core = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
httpdate = "1"
schemars = { version = "1", features = ["chrono04"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
yare = "3"
httpmock = "0.8"
rstest = "0.26"
trybuild = "1"
