[package]
name = "hubuum_client_derive"
version = "0.0.2"
edition = "2024"
license = "MIT"
description = "Procedural macros used by hubuum_client to define Hubuum API resources."
repository = "https://github.com/terjekv/hubuum-client-rust"
documentation = "https://docs.rs/hubuum_client_derive"
readme = "README.md"
keywords = ["hubuum", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1.0"
proc-macro2 = "1.0"
