[package]
name = "hubuum_client_derive"
version = "0.5.1"
edition = "2024"
rust-version = "1.86"
license = "MIT"
description = "Procedural macros used by hubuum_client to define Hubuum API resources."
repository = "https://github.com/hubuum/hubuum-client-rust"
documentation = "https://docs.rs/hubuum_client_derive"
readme = "README.md"
keywords = ["hubuum", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1.0"
proc-macro2 = "1.0"
