[package]
name = "hubuum_reconcile"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
license = "MIT"
description = "Declarative reconciliation plans for Hubuum"
repository = "https://github.com/hubuum/hubuum-client-rust"
documentation = "https://docs.rs/hubuum_reconcile"
readme = "README.md"
keywords = ["hubuum", "reconciliation", "declarative", "api"]
categories = ["api-bindings", "config"]

[features]
default = ["async"]
async = ["hubuum_client/async"]
blocking = ["hubuum_client/blocking"]

[dependencies]
hubuum_client = { version = "0.3.0", path = "..", default-features = false }
serde = { version = "1", features = ["derive"] }
